ags (0.9.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing initial configuration of pulseaudio
	* improved throughput of pulseaudio by using maxlength of stream -1
	* improved clear buffer task to let ring-buffer being valid longer

ags (0.9.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_pulse_server.c, ags_pulse_client.c and ags_pulse_port.c
	* implemented ags_pulse_devout.c
	* refactored AgsSoundcardEditor to work with pulseaudio, too
	* fixed memory leak related to mutex and its attributes for AgsDevout, AgsMidiin, AgsJackDevout and AgsJackMidiin
	* fixed missing paranthesis to check flags in ags_devout.c, ags_midiin.c, ags_jack_devout.c and ags_clear_buffer.c

ags (0.9.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_input_apply_synth() and ags_input_apply_synth_extended()
	* fixed ags_syncsynth_reset_loop() to use attack to calculate loop upper
	* fixed ags_recall_container_find() and its flags to enumerate correctly
	* fixed ags_thread_pool_creation_thread() to check parent for NULL
	* enabled unit-test ags_input_test.c because not tested
	* new unit-test ags_midiin_test.c
	* new unit-test ags_output_test.c
	* new unit-test ags_playback_domain_test.c
	* new unit-test ags_playback_test.c
	* new unit-test ags_preset_test.c
	* new unit-test ags_recall_channel_test.c
	* new unit-test ags_recall_channel_run_test.c
	* new unit-test ags_recall_container_test.c
	* new unit-test ags_recall_dependency_test.c

ags (0.9.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented pass base-note to AgsApplySynth
	* fixed missing base-note, audio-loop-start and audio-loop-end while read/write XML
	* fixed missing attack as calculating stream size
	* fixed ags_synth_util_get_xcross_count() and related functions

ags (0.9.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_lv2_option_manager_lookup_extended()