@@ -46,6 +46,9 @@ struct _AgsJackClient
 
   guint flags;
 
+  pthread_mutex_t *mutex;
+  pthread_mutexattr_t *mutexattr;
+
   GObject *jack_server;
   
   gchar *uuid;
