@@ -52,6 +52,9 @@ struct _AgsJackServer
 
   guint flags;
 
+  pthread_mutex_t *mutex;
+  pthread_mutexattr_t *mutexattr;
+
   GObject *application_context;
 
   gchar *url;
